InternexDev_Sandbox/src/objects/Bank_Account_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Counter Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Account_Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank Account #</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MP External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_MP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Branch_Name__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Bank_Account__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Routing_Number__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Bank-AC-{00000}</displayFormat>
        <label>Bank Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bank_Name_Account_Nickname_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Bank_Account__c)&lt; 5 || LEN( Bank_Name__c )&lt; 5 || AND(NOT(ISBLANK(Nick_Name__c)),LEN( Nick_Name__c )&lt; 5)</errorConditionFormula>
        <errorMessage>Bank Account , Bank Name and Nickname should be at least 5 Characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_State_ISO_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(State__c)),OR(LEN(State__c)&gt;2 ,OR(LEN(SUBSTITUTE(State__c,&apos;,&apos;,NULL)) != 2,IF(FIND(SUBSTITUTE(State__c,&apos;,&apos;,NULL), &apos;AL,AK,AZ,AR,CA,CO,CT,DE,DC,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS,MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY&apos;) != 0,False,True))))</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>Please enter the valid USA ISO state codes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Validation_in_USA_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Zip_Code__c)),OR(AND(Not(LEN(Zip_Code__c) = 5),Not(LEN(Zip_Code__c) = 10)),AND(LEN(Zip_Code__c) = 10,NOT(REGEX( Zip_Code__c, &quot;[0-9]{5}-[0-9]{4}&quot;))),AND(LEN(Zip_Code__c) = 5,NOT(REGEX( Zip_Code__c, &quot;[0-9]{5}&quot;)))))</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>Please enter the Zip Code in the format &quot;99999-9999&quot; or &quot;99999&quot;</errorMessage>
    </validationRules>
</CustomObject>